[gd_scene load_steps=4 format=3 uid="uid://ch5ssq88yx1t6"]

[ext_resource type="Script" path="res://scripts/UI/Main/Multiplayer/Multiplayer.gd" id="1_kiuv4"]
[ext_resource type="PackedScene" uid="uid://br7bwm535odl2" path="res://scenes/UI/Main/Multiplayer/Join.tscn" id="1_xaijk"]
[ext_resource type="PackedScene" uid="uid://bdvt30ldb25s8" path="res://scenes/UI/Main/Multiplayer/Host.tscn" id="2_flbpf"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kiuv4")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Multijoueur"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Main" type="MarginContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer/Main"]
layout_mode = 2

[node name="Join" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
text = "Rejoindre"

[node name="Host" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
text = "HÃ©berger"

[node name="Back" type="Button" parent="Margin/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Join")
text = "Retour"

[node name="Sub" type="MarginContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 150

[node name="Join" parent="Margin/HBoxContainer/Sub" instance=ExtResource("1_xaijk")]
visible = false
layout_mode = 2

[node name="Host" parent="Margin/HBoxContainer/Sub" instance=ExtResource("2_flbpf")]
visible = false
layout_mode = 2

[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/Main/VBoxContainer/Back" to="." method="_on_back_pressed"]
